fix veel bugs met JWT tokens. (wel AI assisted, zat vast). AI report summary: "Every cart/checkout/order-list/profile call silently dropped the                     Authorization header (request() without auth:true), so all authenticated                     routes 401'd. Also:                     - guest "Add to cart" redirects to login with a notice (no guest carts)                     - drop dead customerId from cart/checkout bodies (JWT subject is truth)                     - payment confirm sends the shared-secret webhook header                     - open/closed badges + list filter use time-based openNow, not ACTIVE                     - account + checkout fall back to Keycloak name/email                     - nav role groups separated by a primary-colour '|'                     - owner order lookup accepts a full id or unique prefix (no more 400s)                     - input type set via the IDL property so date pickers open on mobile
"